# bones

./: README.md  docker-compose.yml  example.env  package-lock.json
bones/src/: main.rs
docker/sql/: setup.sql
docker_bones/: Dockerfile  docker-compose.yml
docker_bones/bones/: Cargo.toml
docker_bones/bones/src/: main.rs
docker_bones/docker/sql/: setup.sql
docker_bones/sql/: build_db.sql  database.drawio  user_perms.sql
docker_bones/svelte/frontend/: package-lock.json  package.json
docker_bones/svelte/frontend/src/routes/: +page.svelte
docker_bones/svelte/frontend/src/routes/bill/[slug]/: +page.svelte
docker_bones/svelte/frontend/static/: style.css
docker_bones/svelte/frontend/tests/: test.ts
sql/: initial_user.sql  insert.sql  user_perms.sql
svelte/frontend/: Dockerfile  package-lock.json  package.json
svelte/frontend/src/routes/: +page.server.js
svelte/frontend/src/routes/bill/[slug]/: +page.server.js
