[package]
name = "bones"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
actix-cors = "0.7.0"

jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
cookie = "0.16"
chrono = "0.4.38"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
